# scripted-video

./: FileManager.py  LICENSE  README.md  ScriptManager.py  VideoReader_Primary.py  class_Compile.py  class_FrameDraw.py  game_script_sample.txt  primary.py  pyproject.toml  requirements.txt  requirements_dev.txt  sample_script.txt  script_manager.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
code/: Compiler.py  File.py  FileManager.py  FrameDraw.py  Scripter.py  Timetable.py  primary.py
demo_scripts/01_proof_of_concept/: scriptedVideo_demoScript_1.txt  svDemo1.txt
demo_scripts/02_testing_movement/: svDemo2_DESIGN.txt  svDemo2_LIBRARY.txt  svDemo2_TIMELINE.txt
scripted_video/: FrameDraw.py  __main__.py  compile_time.py  parser.py  primary.py  utils.py
scripted_video/objects/: ImageObject.py  ObjectDict.py  _time.py  declarable_objects.py  frames.py  instruction.py  properties.py
scripted_video/qualms/: __init__.py  _root_pseudo_error.py  crash.py  group.py  qualms.py
scripted_video/svst/: __init__.py  _attribute_superclass.py  _dynamic_attributes.py  _dynamic_attributes.pyi  _factory_functions.py  _functions.py  dump.py  neutral_nodes.py  root_node.py  syntax_nodes.py  timeline_nodes.py  visitor.py  (+1 more)
test_script_one/: sample_script.txt
tests/: _syntax_match_functions.py  example_script_file_1.txt  example_script_file_2.txt  example_script_file_3.txt  performance_testing.py  test_Compiler_CREATE-OBJECT.py  test_Compiler_HEAD.py  test_Compiler_SET.py  test_Scripter.py  test_parser.py  test_qualms.py  test_syntax.py  test_variables.py
(+39 files in other folders)
