[metadata]
name = scripted_video
version = 0.0.0
description = A program that can create a custom video from a special script.
author = TNTMaster370
license = AGPL-3.0
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    scripted_video
install_requires =
    Pillow>=9.3
    moviepy>=1
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.package_data]
scripted_video = py.typed

[flake8]
max-line-length = 160